--- a/style.css
+++ b/style.css
@@ -91,6 +91,12 @@ nav a img{
     display: flex;
     gap: 20px;
 }
+@media (max-width: 768px) {
+    .container {
+        width: 96%;
+        margin: 20px auto;
+    }
+}
 
 /* الأقسام */
 .right {
@@ -100,6 +106,11 @@ nav a img{
     border-radius: 8px;
     box-shadow: 0 2px 5px rgba(0, 0, 0, 0.1);
 }
+@media (max-width: 768px) {
+    .right {
+        padding: 10px;
+    }
+}
 
 .left {
     flex: 2;
@@ -107,6 +118,11 @@ nav a img{
     padding: 20px;
     border-radius: 8px;
     box-shadow: 0 2px 5px rgba(0, 0, 0, 0.1);
+}
+@media (max-width: 768px) {
+    .left {
+        padding: 10px;
+    }
 }
 
 /* استجابة الهاتف */
